--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                                             <div class="input-group-prepend">
                                             <div class="input-group-text"><i class="icofont-location-pin"></i></div>
                                             </div>
-                                            <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Enter a hotel name or destination">
+                                            <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Enter a all stays or destination">
                                         </div> 
                                     </div>
                                     <div class="col-md-2 step-three">
@@ -167,7 +167,7 @@
                                             <div class="input-group-prepend">
                                             <div class="input-group-text"><i class="icofont-location-pin"></i></div>
                                             </div>
-                                            <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Enter a hotel name or destination">
+                                            <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Enter a Hous / Appertment name or destination">
                                         </div> 
                                     </div>
                                     <div class="col-md-2 step-three">
@@ -210,8 +210,8 @@
     <section id="search-result">
         <div class="container">
             <!-- Result Box -->
-            <div class="box">
-                <div class="row">
+            <div class="box" class="accordion" id="accordionExample">
+                <div class="row" data-toggle="collapse" data-target="#collapse1">
                     <div class="col-md-8">
                         <div class="row">
                             <div class="col-md-4">
@@ -280,10 +280,16 @@
                         </div>
                     </div>
                 </div>
+                <!-- Collapse area -->
+                <div id="collapse1" class="collapse collapse-section" aria-labelledby="headingOne" data-parent="#accordionExample">
+                    <div class="card-body">
+                      Some placeholder content for the first accordion panel. This panel is shown by default, thanks to the <code>.show</code> class.
+                    </div>
+                  </div>
             </div>
-            <!-- Result BOx -->
-            <div class="box">
-                <div class="row">
+            <!-- Result box -->
+            <div class="box" class="accordion" id="accordionExample">
+                <div class="row" data-toggle="collapse" data-target="#collapse2">
                     <div class="col-md-8">
                         <div class="row">
                             <div class="col-md-4">
@@ -352,10 +358,16 @@
                         </div>
                     </div>
                 </div>
+                <!-- Collapse area -->
+                <div id="collapse2" class="collapse collapse-section" aria-labelledby="headingOne" data-parent="#accordionExample">
+                    <div class="card-body">
+                      Some placeholder content for the first accordion panel. This panel is shown by default, thanks to the <code>.show</code> class.
+                    </div>
+                  </div>
             </div>
-                        <!-- Result BOx -->
-            <div class="box">
-                <div class="row">
+                        <!-- Result box -->
+            <div class="box" class="accordion" id="accordionExample">
+                <div class="row" data-toggle="collapse" data-target="#collapse3">
                     <div class="col-md-8">
                         <div class="row">
                             <div class="col-md-4">
@@ -424,10 +436,17 @@
                         </div>
                     </div>
                 </div>
+                <!-- Collapse area -->
+                <div id="collapse3" class="collapse collapse-section" aria-labelledby="headingOne" data-parent="#accordionExample">
+                    <div class="card-body">
+                      Some placeholder content for the first accordion panel. This panel is shown by default, thanks to the <code>.show</code> class.
+                    </div>
+                  </div>
             </div>
-                        <!-- Result BOx -->
-            <div class="box">
-                <div class="row">
+
+                        <!-- Result box -->
+            <div class="box" class="accordion" id="accordionExample">
+                <div class="row" data-toggle="collapse" data-target="#collapse4">
                     <div class="col-md-8">
                         <div class="row">
                             <div class="col-md-4">
@@ -496,10 +515,17 @@
                         </div>
                     </div>
                 </div>
+                <!-- Collapse area -->
+                <div id="collapse4" class="collapse collapse-section" aria-labelledby="headingOne" data-parent="#accordionExample">
+                    <div class="card-body">
+                      Some placeholder content for the first accordion panel. This panel is shown by default, thanks to the <code>.show</code> class.
+                    </div>
+                  </div>
             </div>
-                        <!-- Result BOx -->
-            <div class="box">
-                <div class="row">
+
+                        <!-- Result box -->
+            <div class="box" class="accordion" id="accordionExample">
+                <div class="row" data-toggle="collapse" data-target="#collapse5">
                     <div class="col-md-8">
                         <div class="row">
                             <div class="col-md-4">
@@ -568,7 +594,16 @@
                         </div>
                     </div>
                 </div>
+                <!-- Collapse area -->
+                <div id="collapse5" class="collapse collapse-section" aria-labelledby="headingOne" data-parent="#accordionExample">
+                    <div class="card-body">
+                      Some placeholder content for the first accordion panel. This panel is shown by default, thanks to the <code>.show</code> class.
+                    </div>
+                  </div>
             </div>
+
+
+
         </div>
     </section>
 
