--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                               <!-- Tab Pane -->
                             <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
                                 <div class="row">
-                                    <div class="col-md-10 step-one">      
+                                    <div class="col-md-6 step-one">      
                                         <label class="sr-only" for="inlineFormInputGroup">Username</label>
                                         <div class="input-group">
                                             <div class="input-group-prepend">
@@ -149,9 +149,22 @@
                                             <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Enter a all stays or destination">
                                         </div> 
                                     </div>
-                                    <div class="col-md-2 step-three">
-                                        <div class="row align-items-start">
-                                            <div class="col">
+                                    <div class="col-md-6 step-three">
+                                        <div class="row d-flex align-items-start">
+                                            <div class="col-8">
+                                                <div class="search-select">
+                                                    <label class="sr-only" for="category">Category select</label>
+                                                    <select class="form-control" id="category">
+                                                      <option>Chose One</option>
+                                                      <option>Man</option>
+                                                      <option>Women</option>
+                                                      <option>Baby</option>
+                                                      <option>Shirt</option>
+                                                      <option>Tops</option>
+                                                    </select>
+                                                  </div>
+                                            </div>
+                                            <div class="col-4">
                                                 <input class="submit" type="submit" value="Search">
                                             </div>
                                         </div>
