--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                             <nav>
                                 <div class="nav nav-tabs" id="nav-tab" role="tablist">
                                     <a class="nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home"
-                                        role="tab" aria-controls="nav-home" aria-selected="true">All Stays</a>
+                                        role="tab" aria-controls="nav-home" aria-selected="true">Cosmetics</a>
                                 </div>
                             </nav>
                             <div class="tab-content" id="nav-tabContent">
